# SPL-Giver

./: .gitignore  Cargo.toml  README.md  buyers_list.csv  groups.yaml
cli/: Cargo.toml
cli/src/: args.rs  lib.rs
common/: Cargo.toml
common/src/: db.rs  helpers.rs  lib.rs  spl_token.rs
common/src/schema/: buyer.rs  group.rs  mod.rs  schedule.rs  transaction.rs  users.rs
migrations/: 20250603194803_group.up.sql  20250603194850_buyers.down.sql  20250603194850_buyers.up.sql  20250603195009_transactions.down.sql  20250603195009_transactions.up.sql  20250612204005_shedule.down.sql  20250612204005_shedule.up.sql  20250623101156_users.up.sql
spl_giver/: Cargo.toml
spl_giver/src/: config.rs  distribution.rs  main.rs  state.rs
spl_giver/src/handlers/: auth.rs  buyers.rs  groups.rs  mod.rs  schedule.rs  transactions.rs
src/: distribution.rs  main.rs
src/schema/: buyer.rs  group.rs  mod.rs  shedule.rs  transaction.rs
src/state/: buyer.rs  db.rs  group.rs  mod.rs  spl_token_context.rs
