[package]
name = "spl_giver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"

log = "0.4.27"
pretty_env_logger = "0.5.0"

anyhow = "1.0.98"
dotenv = "0.15.0"

solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "8.0.1"
spl-token-metadata-interface = "0.7.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
csv-async = { version = "1.3.1", features = ["tokio"] }
rand = "0.9.1"
chrono = {version="0.4.41", features = ["serde"]}

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "uuid",
    "migrate",
    "chrono"
] }
