[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "8.0.1"
spl-token-metadata-interface = "0.7.0"

log = "0.4.27"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "mysql",
    "derive",
    "uuid",
    "migrate",
    "chrono",
] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
csv-async = { version = "1.3.1", features = ["tokio"] }

tokio-stream = "0.1.17"
tokio = { version = "1.45.1", features = ["fs"] }


argon2 = "0.5.3"
once_cell = "1.21.3"
fancy-regex = "0.14.0"
