[package]
name = "spl_giver"
version = "0.1.0"
edition = "2024"

[dependencies]
cli = { path = "../cli" }
common = { path = "../common" }

actix-web = "4.10.2"
actix-jwt-auth-middleware = "0.5.0"
actix-state-guards = "0.1.0"
actix-multipart = "0.7.2"

tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"

log = "0.4.27"
pretty_env_logger = "0.5.0"

anyhow = "1.0.98"
dotenv = "0.15.0"

solana-sdk = "2.2.2"
chrono = "0.4.41"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

ed25519-compact = "2.1.1"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
